Registro local de componente

--- a/Componentes/vue-components-intro/public/index.html
+++ b/Componentes/vue-components-intro/public/index.html
@@ -11,8 +11,10 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app">
+    <div id="app1">
       <my-component></my-component>
+    </div>
+    <div id="app2">
       <my-component></my-component>
     </div>
     <!-- built files will be auto injected -->
