--- a/Componentes/vue-components-comunicacao/public/index.html
+++ b/Componentes/vue-components-comunicacao/public/index.html
@@ -9,7 +9,7 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 
 <body>
